# QtZeroConf

./: .clang-format  CMakeLists.txt  QZeroConfNsdManager.java  README.md  androidnsd.cpp  androidnsd_p.h  avahiclient.cpp  avahicore.cpp  bonjour.cpp  bonjour_p.h  qtzeroconf.pri  qtzeroconf.pro  qzeroconf.h  qzeroconfservice.cpp  qzeroconfservice.h
avahi-core/: iface-android-api-30.c
bonjour-sdk/: CommonServices.h  dnssd_clientstub.c
example/: CMakeLists.txt  main.cpp  test_app.pro  window.cpp  window.h
example/android/src/: QZeroConfNsdManager.java
